hard-gists/4713392/run.log
=== Docker Run Log for 4713392 ===
Started at: Mi 29. Okt 14:58:03 CET 2025

[2025-10-29 14:58:04] START: Running container for 4713392
[2025-10-29 14:58:04] SUCCESS: Container 3f83760041d6652ec5916df552c8a659cb5054dcc0e53e005595dbf9c38b9acf started for 4713392
=== Container logs for 4713392 ===
  File "/snippet.py", line 24
    except FolderExistsException, e:
           ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 4713392 ===
[2025-10-29 14:58:06] INFO: Container 3f83760041d6652ec5916df552c8a659cb5054dcc0e53e005595dbf9c38b9acf has stopped
